<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="20sp"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterIdPreference" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/pref_savedID"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/lastUpdateDate" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/pref_lastUpdateDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autoUpdateStatus" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/pref_autoUpdate"
                    />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/buttonResults"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/showResults" />

        <Button
            android:id="@+id/buttonNotification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/showNews" />

    </LinearLayout>

</ScrollView>